# wordle

./: Cargo.toml  README.md
src/: main.rs  wordle.rs
