[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
authors=["Natan"]
keywords=["Wordle", "cli", "game"]
categories = ["Games", ""]
readme = "README.md"
repository = "https://github.com/NatanFreeman/wordle"
license = "Apache-2.0"
license-file = "LICENCE"
description="A simple command line Wordle implementation written in Rust."

[dependencies]
rand = "0.8.4"
colored = "2.0.0"
webster = "0.3.0"